tests/snapshots/examples_basics/records.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/records.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
