tests/snapshots/examples_basics/safe_arithmetic.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/safe_arithmetic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
