tests/snapshots/examples_basics/semicolons.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/semicolons.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:7:1
  |
7 | print("=== Semicolon Demonstration ===")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/semicolons.flx:7:1
  |
7 | print("=== Semicolon Demonstration ===")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:8:1
  |
8 | print("")
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:14:1
   |
14 | print("1. Top-level statements (no semicolons needed):")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:18:1
   |
18 | print("   x + y = " + to_string(x + y))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:21:1
   |
21 | print("")
   | ^^^^^^^^^
   | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:27:1
   |
27 | print("2. Same line (also parses):")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:29:1
   |
29 | print("   a=" + to_string(a) + " b=" + to_string(b) + " c=" + to_string(c))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:30:1
   |
30 | print("")
   | ^^^^^^^^^
   | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:36:1
   |
36 | print("3. Functions:")
   | ^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:37:1
   |
37 | print("")
   | ^^^^^^^^^
   | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:43:1
   |
43 | print("   add(5, 3) = " + to_string(add(5, 3)))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:51:1
   |
51 | print("   calculate(5) = " + to_string(calculate(5)))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:60:1
   |
60 | print("   get_max(10, 20) = " + to_string(get_max(10, 20)))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:69:1
   |
69 | print("   check_positive(5) = " + check_positive(5))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:70:1
   |
70 | print("   check_positive(-5) = " + check_positive(-5))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:79:1
   |
79 | print("   outer(5) = " + to_string(outer(5)))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:80:1
   |
80 | print("")
   | ^^^^^^^^^
   | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:86:1
   |
86 | print("4. Style comparison:")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:87:1
   |
87 | print("")
   | ^^^^^^^^^
   | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:92:1
   |
92 | print("   Style A: " + lang + " v" + version)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:95:1
   |
95 | print("")
   | ^^^^^^^^^
   | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:100:1
    |
100 | print("   Style B: " + name + " " + to_string(year))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ---------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:101:1
    |
101 | print("")
    | ^^^^^^^^^
    | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:107:1
    |
107 | print("=== Summary ===")
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    | ------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:108:1
    |
108 | print("")
    | ^^^^^^^^^
    | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:109:1
    |
109 | print("Semicolons OPTIONAL:")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:110:1
    |
110 | print("  ✓ Top-level statements on separate lines")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | --------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:111:1
    |
111 | print("  ✓ Top-level call/let statements")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ------------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:112:1
    |
112 | print("  ✓ Statements inside function bodies")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ---------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:113:1
    |
113 | print("")
    | ^^^^^^^^^
    | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:114:1
    |
114 | print("Semicolons ALSO VALID:")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:115:1
    |
115 | print("  ✓ Multiple statements on same line")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | --------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:116:1
    |
116 | print("  ✓ Function body statements")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:117:1
    |
117 | print("  ✓ Return statements")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:118:1
    |
118 | print("")
    | ^^^^^^^^^
    | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:119:1
    |
119 | print("Parser Note:")
    | ^^^^^^^^^^^^^^^^^^^^^
    | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:120:1
    |
120 | print("  Newlines are not separate tokens")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:121:1
    |
121 | print("  Parser progress separates statements")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ----------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:122:1
    |
122 | print("")
    | ^^^^^^^^^
    | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:123:1
    |
123 | print("Recommendation:")
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    | ------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:124:1
    |
124 | print("  Pick one style and stay consistent")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | --------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/semicolons.flx:125:1
    |
125 | print("  Use semicolons when they improve readability")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ------------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 43 errors.
== stdout ==
<not executed>
