tests/snapshots/examples_basics/strings.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/strings.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
