tests/snapshots/examples_basics/tuples.snap
---
source: tests/examples_basics_snapshots.rs
assertion_line: 21
---
Fixture: examples/basics/tuples.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
